# VehiclesMS/routes/vehicle.py
@@ -10,10 +10,10 @@ from schemas.vehicle import VehicleSchema
 from schemas.driver import DriverSchema
 
 from app import db
+import json
+import requests
 
 vehicles_bp = Blueprint("vehicles", __name__, url_prefix="/vehicles")
-
-import requests
 
 
 @vehicles_bp.route('/<int:vehicle_id>', methods=['GET'])
@@ -31,14 +31,6 @@ def get_vehicle(vehicle_id):
 @doc(tags=['vehicles'], description='Get all vehicles')
 @marshal_with(VehicleSchema(many=True))
 def get_all_vehicles():
-
-    url = 'http://localhost:8082/tracking/drivers/{}'.format('1f712765-b26a-4abe-92ba-09c1952182d2')
-    result = requests.get(url)
-
-    driver = DriverSchema().load(result.json())
-    # print(url)
-    pprint(driver)
-
     vehicles = Vehicle.query.all()
     return vehicles
 
@@ -48,7 +40,34 @@ def get_all_vehicles():
 @use_kwargs(VehicleSchema)
 @marshal_with(VehicleSchema)
 def create_vehicle(**kwargs):
-    vehicle = Vehicle(**kwargs)
+    vehicle_schema = VehicleSchema()
+    vehicle_schema.color = kwargs["color"]
+    vehicle_schema.vin = kwargs["vin"]
+    vehicle_schema.number_plate = kwargs["number_plate"]
+    vehicle_schema.telemetry_profile_id = kwargs["telemetry_profile_id"]
+    vehicle_schema.driver_id = kwargs["driver_id"]
+
+    url = 'http://localhost:8082/tracking/drivers/{}'.format(vehicle_schema.driver_id)
+    driver_result = requests.get(url)
+    if not driver_result.ok:
+        raise Exception("Driver Not Found")
+
+    url = 'http://localhost:8081/tracking/telemetryprofiles/{}'.format(vehicle_schema.telemetry_profile_id)
+    telemetry_result = requests.get(url)
+    if not telemetry_result.ok:
+        raise Exception("Telemetry Not Found")
+
+    driver = DriverSchema().load(driver_result.json())
+    telemetry_dict = json.loads(telemetry_result.content)
+
+    vehicle = Vehicle()
+    vehicle.telemetry_profile_id = telemetry_dict["telemetryprofileId"]
+    vehicle.driver_id = driver['driver_id']
+    vehicle.customer_id = driver['customer_id']
+    vehicle.number_plate = vehicle_schema.number_plate
+    vehicle.vin = vehicle_schema.vin
+    vehicle.color = vehicle_schema.color
+
     db.session.add(vehicle)
     db.session.commit()
     return vehicle
